lilypond (1.0.19.uu1-2) frozen unstable; urgency=low

  * [debian/rules]: Now builds the LilyPond documentation in dvi format.
      Thanks to Roland Rosenfeld <roland@spinnaker.rhein.de>
      for the bug report. (closes: Bug#30123).
  * [debian/control]: Now also Recommends: tetex-extra (>= 0.9.981030-1)
      because the .dvi documentation uses the EC fonts in that package.

 -- Anthony Fok <foka@debian.org>  Thu, 10 Dec 1998 17:43:57 -0700

lilypond (1.0.19.uu1-1) frozen unstable; urgency=low

  * New upstream bugfix release.

 -- Anthony Fok <foka@debian.org>  Mon,  7 Dec 1998 13:12:02 -0700

lilypond (1.0.18-2) frozen unstable; urgency=low

  * [debian/rules]: Added symlink /usr/lib/texmf/fonts/afm/public/lilypond.
      Thanks to Julian Gilbey <jdg@maths.qmw.ac.uk> for the bug report
      (closes: Bug#29407).
  * [scripts/ly2dvi.py]: Re-added a patch similar to the one in 1.0.17-1,
      but teTeX's default search path is now placed *before* the ones that
      ly2dvi adds.  Thanks to Roland Rosenfeld <roland@spinnaker.rhein.de>
      for the bug report. (closes: Bug#29459).

 -- Anthony Fok <foka@debian.org>  Mon, 23 Nov 1998 21:29:25 -0700

lilypond (1.0.18-1) frozen unstable; urgency=low

  * New upstream bugfix release.
  * [debian/control]:
      - Upgraded to standards version 2.5.0.0 (no changes).
      - Recommends: python-misc (>= 1.5.1) because ly2dvi needs the glob
        module in the python-misc package (closes: Bug#29283).
      - Updated dependencies on tetex* to the latest versions:
          Depends: tetex-bin (>= 0.9.981031-2)
          Recommends: tetex-base (>= 0.9.981030-1)
        due to changes in tetex's directory structure.
  * [debian/rules]:
      - The symlink ../../../../../share/lilypond/mf is now named
        /usr/lib/texmf/fonts/source/public/lilypond instead of
        /usr/lib/texmf/fonts/source/public/mf (Bug#29284).
      - In the latest tetex-base package, /usr/lib/texmf/doc is now a