@@ -2,31 +2,23 @@ Source: lilypond
 Section: tex
 Priority: optional
 Maintainer: Anthony Fok <foka@debian.org>
-Standards-Version: 2.4.1.0
+Standards-Version: 2.5.0.0
 
 Package: lilypond
 Architecture: any
-Depends: ${shlibs:Depends}, tetex-base (>= 0.9-5)
-Recommends: python-base (>= 1.5.1)
+Depends: ${shlibs:Depends}, tetex-bin (>= 0.9.981031-2)
+Recommends: python-base (>= 1.5.1), python-misc (>= 1.5.1), tetex-base (>= 0.9.981030-1), tetex-extra (>= 0.9.981030-1)
 Conflicts: musixtex-fonts, tetex-base (<< 0.9)
 Description: The GNU Project music typesetter.
  LilyPond is the GNU Project music typesetter.  This program can print
  beautiful sheet music from a music definition file.  It can also play
  mechanical performances to a MIDI file.  Features include multiple
- staffs, meters, clefs, keys, lyrics, versatile input language,
- cadenzas, beams, slurs, triplets, formatting scores, part extraction.
- It includes a nice font of musical symbols.
- .
- LilyPond is de muziek typesetter van het GNU Project.
- Het programma genereert prachtige bladmuziek uit een muziek definitie
- bestand.  Ook kan het (mechanische) uitvoeringen afspelen naar MIDI
- bestanden.  Bijzondere mogelijkheden omvatten verscheidene notenbalken,
- maatsoorten, sleutels, toonsoorten, zangteksten, krachtige invoer taal,
- cadensa, balken, boogjes, triolen, partituren, en losse partijen.  Een
- fraai font met muzikeksymbolen wordt meegeleverd.
+ staffs, meters, clefs, keys, lyrics, versatile input language, cadenzas,
+ beams, slurs, triplets, formatting scores, part extraction.  It includes
+ a nice font of musical symbols.
  .
   URLs: http://www.cs.uu.nl/~hanwen/lilypond/
-        http://www.digicash.com/~jan/lilypond/
-        http://sca.uwaterloo.ca/lilypond/
+        http://www.xs4all.nl/~jantien/lilypond/
+        http://sca.uwaterloo.ca/~praetzel/lilypond/
   Authors: Han-Wen Nienhuys <hanwen@cs.uu.nl>
            Jan Nieuwenhuizen <janneke@gnu.org>
